--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "JSON Formatter",
-  "version": "0.5",
+  "version": "0.5.2",
   "manifest_version": 2,
-  "description": "Makes JSON easy to read.",
+  "description": "Makes JSON easy to read. Open source.",
   "homepage_url": "https://github.com/callum85/json-formatter",
   "minimum_chrome_version": "21",
   "icons": {
@@ -15,5 +15,5 @@
   "content_scripts": [
     { "matches": ["<all_urls>"], "js": ["js/content.js"], "run_at": "document_start" }
   ],
-  "permissions":["tabs", "*://*/*", "<all_urls>"]
+  "permissions":["*://*/*", "<all_urls>"]
 }
