--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
   "author": "Nik Rolls <nik@rolls.cc>",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.4.0",
+    "css-loader": "^0.28.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-header-license": "^1.0.9",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
-    "merge2": "^1.0.3"
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
+    "text-loader": "^0.0.1",
+    "vinyl-named": "^1.1.0",
+    "webpack": "^2.4.1",
+    "webpack-stream": "^3.2.0"
   }
 }
