--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,5 +17,5 @@
   "content_scripts": [
     { "matches": ["<all_urls>"], "js": ["js/content.js"], "run_at": "document_start" }
   ],
-  "permissions":["*://*/*", "<all_urls>"]
+  "permissions":["storage", "*://*/*", "<all_urls>"]
 }
