--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-header-license": "^1.0.9",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
+    "gulp-zip": "^4.0.0",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
     "text-loader": "^0.0.1",
