--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "Nik Rolls <nik@rolls.cc>",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -18,8 +20,10 @@
     "gulp-uglify": "^2.1.2",
     "gulp-zip": "^4.0.0",
     "node-sass": "^4.5.2",
+    "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
     "text-loader": "^0.0.1",
+    "to-string-loader": "^1.1.5",
     "vinyl-named": "^1.1.0",
     "webpack": "^2.4.1",
     "webpack-stream": "^3.2.0"
