--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -20,5 +20,9 @@
 	}
   ],
   "web_accessible_resources": ["styles/*"],
-  "permissions":["*://*/*", "<all_urls>"]
+  "permissions":["*://*/*", "<all_urls>", "storage"],
+  "browser_action": 
+  {
+	"default_popup": "options.html"
+  }
 }
