reverted the change in name

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "JSON Formatter - Tushar",
+  "name": "JSON Formatter",
   "version": "0.6.1",
   "manifest_version": 2,
   "description": "Makes JSON easy to read. Open source.",
