--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,7 +13,12 @@
     "scripts": ["js/background.js"]
   },
   "content_scripts": [
-    { "matches": ["<all_urls>"], "js": ["js/content.js"], "run_at": "document_start" }
+    {
+      "matches": ["<all_urls>"],
+      "css": ["css/content.css"],
+      "js": ["js/content.js"],
+      "run_at": "document_start"
+    }
   ],
   "permissions":["*://*/*", "<all_urls>"]
 }
