add option to override theme

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,5 +16,10 @@
       "run_at": "document_end"
     }
   ],
-  "host_permissions": ["*://*/*", "<all_urls>"]
+  "permissions": ["storage"],
+  "host_permissions": ["*://*/*", "<all_urls>"],
+  "options_ui": {
+    "page": "options/options.html",
+    "open_in_tab": false
+  }
 }
