Fixed style compilation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "@types/chrome": "^0.0.203",
-    "esbuild": "^0.17.5"
+    "@types/chrome": "^0.0.267",
+    "esbuild": "^0.20.2",
+    "esbuild-plugin-inline-css": "^0.0.1"
   }
 }
