--- a/deno.json
+++ b/deno.json
@@ -2,8 +2,8 @@
   "tasks": {
     "test": "deno test -RE tests",
     "update-snapshots": "UPDATE_SNAPSHOTS=1 deno test -REW tests",
-    "build": "deno run --allow-all --unstable './tasks/build.ts'",
-    "dev": "deno run --allow-all --unstable './tasks/dev.ts'"
+    "build": "deno run --allow-all './tasks/build.ts'",
+    "dev": "deno run --allow-all './tasks/dev.ts'"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.15",
@@ -14,5 +14,6 @@
   "compilerOptions": {
     "lib": ["es2016", "deno.ns"]
   },
-  "workspace": ["./tests"]
+  "workspace": ["./tests"],
+  "nodeModulesDir": "auto"
 }
