add 'Classic' to name

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "JSON Formatter",
+  "name": "JSON Formatter Classic",
   "version": "0.8.1",
   "manifest_version": 3,
   "description": "Makes JSON easy to read. Open source.",
